tests/baselines/reference/syntaxErrors(strict=true).errors.txt
badTypeArguments.js(1,13): error TS2314: Generic type 'C<T>' requires 1 type argument(s).
badTypeArguments.js(1,15): error TS1099: Type argument list cannot be empty.
badTypeArguments.js(2,22): error TS1009: Trailing comma not allowed.
badTypeArguments.js(5,12): error TS7006: Parameter 'x' implicitly has an 'any' type.
badTypeArguments.js(5,15): error TS7006: Parameter 'y' implicitly has an 'any' type.


==== dummyType.d.ts (0 errors) ====
    declare class C<T> { t: T }
    
==== badTypeArguments.js (5 errors) ====
    /** @param {C.<>} x */
                ~~~~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                  ~~
!!! error TS1099: Type argument list cannot be empty.
    /** @param {C.<number,>} y */
                         ~
!!! error TS1009: Trailing comma not allowed.
    // @ts-ignore
    /** @param {C.<number,>} skipped */
    function f(x, y, skipped) {
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                  ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
        return x.t + y.t;
    }
    var x = f({ t: 1000 }, { t: 3000 }, { t: 5000 });
    